# cccp-advisory-system

./: .gitignore  CLAUDE.md  Dockerfile  README.md  demo.html  docker-compose.yaml  pyproject.toml
admin/: Dockerfile  pyproject.toml
admin-frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
admin-frontend/src/: App.tsx  api.ts  index.css
admin-frontend/src/components/: ActiveVersionModal.tsx  AllVersionsModal.tsx  Modal.tsx  UploadModal.tsx  VersionTable.tsx
admin/alembic/: env.py
admin/alembic/versions/: 001_create_kb_tables.py
admin/app/: config.py  database.py  db_models.py  ingestion.py  main.py  models.py  router.py  schemas.py  service.py  storage.py
admin/knowledge/: info.md  products.md
admin/scripts/: seed_kb_v1.py
app/: config.py  main.py  models.py  retrieval.py
knowledge/: course_B.md  course_BV.md  mars-1.md  mars-2.md
nginx/: nginx.conf
query/: Dockerfile  pyproject.toml
query-widget/: .npmrc  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
query-widget/src/: App.tsx  styles.css
query/app/: config.py  main.py  models.py
scripts/: ollama-entrypoint.sh
