[project]
name = "rag-prototype"
version = "0.1.0"
description = "Local RAG system with FastAPI, Qdrant, and Ollama"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-multipart>=0.0.12",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "qdrant-client>=1.12.0",
    "ollama>=0.4.0",
    "pydantic-settings>=2.6.0",
]