[project]
name = "rag-admin"
version = "0.1.0"
description = "RAG admin service — knowledge base ingestion"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "langchain-text-splitters>=0.3.0",
    "qdrant-client>=1.12.0",
    "ollama>=0.4.0",
    "pydantic-settings>=2.6.0",
]
